# STUDENT-RESULT-MANAGEMENT-SYSTEM

./: CMakeLists.txt  README.md  StudentDatabase.cpp  StudentDatabase.h  build.bat  build_simple.bat  compile_vs.bat  database.sql  main.cpp  run.bat  simple_main.cpp
